# CString

./: .gitignore  CMakeLists.txt  CMakeLists.txt.in  README.md  library.c  library.h  main.c
examples/: CMakeLists.txt  example.c  example.h  main.c  test_functions.c  test_functions_cpp.cpp
include/: cstrings.h  cstrings_cpp.h
test/: CMakeLists.txt  divine_comedy.sh  divine_comedy.txt  example.cc  library.cc  main.cc  my_str_append.cc  my_str_append_cstr.cc  my_str_capacity.cc  my_str_clear.cc  my_str_cmp.cc  my_str_cmp_cstr.cc  my_str_copy.cc  my_str_create.cc  my_str_empty.cc  my_str_find.cc  my_str_find_c.cc  my_str_find_if.cc  my_str_free.cc  my_str_from_cstr.cc  my_str_get_cstr.cc  my_str_getc.cc  my_str_insert.cc  my_str_insert_c.cc  my_str_insert_cstr.cc  my_str_length.cc  my_str_popback.cc  my_str_pushback.cc  my_str_putc.cc  my_str_read_file.cc  my_str_read_file_delim.cc  my_str_reserve.cc  my_str_resize.cc  my_str_shrink_to_fit.cc  my_str_substr.cc  my_str_substr_cstr.cc  my_str_write_file.cc
